0.6.4	UNRELEASED

0.6.3	2011-11-01

 FIXES

  * Only actually fetch tags if "branch.fetch_tags" is set to true.
    (Jelmer Vernooij, #771184)

  * Add basic support for alternates. (Jelmer Vernooij)

  * Support addressing branches by ref where the name can't be mapped back to
    a branch. (Jelmer Vernooij, #829481)

  * Skip post commit hook when dulwich is not available.
    (Jelmer Vernooij, #853974)

  * Fix pushing from git repository to git repository.
    (Jelmer Vernooij, #731270)

  * Friendlier error message when HEAD can not be found in remote repository.
    (Jelmer Vernooij, #778920)

  * Support updating tags in remote branches. (Jelmer Vernooij, #706990)

  * Fix compatibility with tags API after changes in bzr.
    (Jelmer Vernooij, #861592)

  * Cope with tags pointing at trees when cloning local git repositories.
    (Jelmer Vernooij, #861973)

  * Remove pending entries when converting directory into tree reference.
    (Jelmer Vernooij, #871595)

  * Fix fetching into repositories with fallback repositories.
    (Jelmer Vernooij, #866028)

 FEATURES

  * Support the git http smart server protocol. (Jelmer Vernooij, #581933)

  * Support removal of remote branches. (Jelmer Vernooij, #855993)

  * Add i18n support. (Jelmer Vernooij)

  * Now includes git remote helper ``git-remote-bzr``. (Jelmer Vernooij)

0.6.2	2011-08-07

 FEATURES

  * Provide Repository.get_known_graph_ancestry(). (Jelmer Vernooij)

  * Provide Repository.get_file_graph(). (Jelmer Vernooij, #677363)

  * Provide GitRevisionTree.get_file_mtime(). (Jelmer Vernooij)

  * Provide GitRevisionTree.get_file_revision(). (Jelmer Vernooij, #780953)

  * Add post-commit hook to update the git cache. (Jelmer Vernooij, #814651)

 PERFORMANCE

  * Significantly improve performance of WorkingTree.extras().
    (Jelmer Vernooij)

 CHANGES

  * Require Dulwich 0.8.0. (Jelmer Vernooij)

0.6.1	2011-06-18

 BUG FIXES

  * Support git repositories without a branches directory in their control